--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "isbot": "^5.1.17",
     "lucide-react": "^0.459.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
