feat: remove fast marquee, make promises component from scratch , make banner responsive, make hook for detect mobile screens

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "include": [
     "./**/*.d.ts",
     "./**/*.ts",
-    "./**/*.tsx"
+    "./**/*.tsx",
+    "app/components/home/promises/Promises.tsx"
   ],
   "compilerOptions": {
     "lib": [
