--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lucide-react": "^0.459.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.6.5"
+    "react-fast-marquee": "^1.6.5",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
