--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@netlify/remix-runtime": "^2.3.1",
     "@remix-run/react": "^2.12.0",
     "@shopify/hydrogen": "^2024.7.4",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^5.1.17",
-    "lucide-react": "^0.459.0",
+    "lucide-react": "^0.460.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.5",
