--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.5",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
