--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@shopify/hydrogen": "^2024.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cva": "^0.0.0",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^5.1.17",
