--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@netlify/edge-functions": "^2.10.0",
     "@netlify/remix-edge-adapter": "^3.4.2",
     "@netlify/remix-runtime": "^2.3.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@remix-run/react": "^2.12.0",
+    "@shadcn/ui": "^0.0.4",
     "@shopify/hydrogen": "^2024.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -29,7 +31,9 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.5",
     "swiper": "^11.1.14",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
