--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8.20.0",
     "eslint-plugin-hydrogen": "^0.12.3",
+    "netlify-cli": "^17.37.2",
     "postcss": "^8.4.49",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.4.15",
