--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.1"
+    "vaul": "^1.1.1",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
