--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@remix-run/react": "^2.12.0",
     "@shadcn/ui": "^0.0.4",
     "@shopify/hydrogen": "^2024.7.4",
+    "@tanstack/react-query-devtools": "^5.61.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "graphql": "^16.6.0",
