--- a/netlify.toml
+++ b/netlify.toml
@@ -9,10 +9,37 @@
 [[headers]]
 for = "/assets/*"
 [headers.values]
-"Cache-Control" = "public, max-age=31560000, immutable"
+  "Cache-Control" = "public, max-age=31560000, immutable"
 
-# These are only used to set up the template, and are not used in the build
-# If you want to update the real values, change them in the site UI or CLI
+# Desactivar caché para las rutas dinámicas (carrito, productos, etc.)
+[[headers]]
+for = "/cart/*"
+[headers.values]
+  Cache-Control = "no-store, no-cache, must-revalidate"
+
+[[headers]]
+for = "/products/*"
+[headers.values]
+  Cache-Control = "no-store, no-cache, must-revalidate"
+
+# Si tienes una API personalizada para obtener productos o gestionar carritos, desactiva el caché en esa ruta también.
+[[headers]]
+for = "/api/*"
+[headers.values]
+  Cache-Control = "no-store, no-cache, must-revalidate"
+
+# Puedes añadir más rutas dinámicas si es necesario, por ejemplo:
+[[headers]]
+for = "/checkout/*"
+[headers.values]
+  Cache-Control = "no-store, no-cache, must-revalidate"
+
+[[headers]]
+for = "/order/*"
+[headers.values]
+  Cache-Control = "no-store, no-cache, must-revalidate"
+
+# Estos son solo valores de plantilla, cambia según tu entorno de producción
 [template.environment]
 PUBLIC_STORE_DOMAIN = "Store domain - set this to 'mock.shop' to try the demo site"
-SESSION_SECRET = "Session secret - set this to a random value for production"
+SESSION_SECRET = "Session secret - set this to a random value for production
